--- a/README.org
+++ b/README.org
@@ -76,4 +76,24 @@
     #+END_SRC
 
     - Change password
-    -
+    - Change locale to en_US.UTF-8
+    - Change timezone
+    - Change wifi country to US
+    - Update
+
+    Reboot
+
+*** Install Docker
+
+    #+BEGIN_SRC sh
+      curl -fsSL https://get.docker.com -o get-docker.sh
+      sudo sh get-docker.sh
+      sudo usermod -aG docker $USER
+      sudo reboot
+    #+END_SRC
+
+*** Test Docker
+
+    #+BEGIN_SRC sh
+      docker run hello-world
+    #+END_SRC
