--- a/README.org
+++ b/README.org
@@ -152,6 +152,14 @@ sudo apt install -y cockpit
 
 https://hostname.local:9090
 
+*** Setup SSH Keys
+
+#+BEGIN_SRC sh
+ssh-keygen -t ed25519 -C "your_email@example.com"
+eval "$(ssh-agent -s)"
+ssh-add ~/.ssh/id_ed25519
+#+END_SRC
+
 *** Install Docker
 
 [[https://github.com/janelia-experimental-technology/docker_setup/blob/master/DOCKER_SETUP_LINUX.org]]
